Added comments to index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <header iv class="header">
         <!--Coloring Header-->
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav> <!-- Navigates to .content section -->
+        <!-- Navigates to .content section -->
+        <nav> 
             <ul>
                 <li><a href="#search-engine-nav">Search Engine Optimization</a></li>
                 <li><a href="#online-reputation-nav">Online Reputation Management</a></li>
@@ -20,8 +21,10 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
+    <!-- main stock image -->
+    <div class="hero"></div> 
     <main class="content">
+        <!-- IDs used for nav, classes for css to maintain same level of specificity throughout stylesheet -->
         <section id="search-engine-nav" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -44,6 +47,7 @@
             </p>
         </section>
     </main>
+    <!-- sidebar elements -->
     <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
