--- a/index.html
+++ b/index.html
@@ -50,21 +50,24 @@
     </main>
     <!-- sidebar elements -->
     <aside class="benefits">
-        <section class="benefit-lead">
+        <section class="benefit-title">
+            <h2>Benefits</h2>
+        </section>
+        <section class="benefit-subtitle">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <section class="benefit-brand">
+        <section class="benefit-subtitle">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <section class="benefit-cost">
+        <section class="benefit-subtitle">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt=""/>
             <p>
