--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>Horiseon | Marketing - Home Page</title>
 </head>
 
 <body>
@@ -22,25 +22,25 @@
         </nav>
     </header>
     <!-- main stock image -->
-    <div class="hero"></div> 
+    <figure class="background-image"></figure> 
     <main class="content">
         <!-- IDs used for nav, classes for css to maintain same level of specificity throughout stylesheet -->
         <!-- Blanked alt element for all images as per accessibility guidelines on https://webaim.org/techniques/images/ | image data does not convey new information to user and icons should not be separate from their associated text -->
-        <section id="search-engine-nav" class="search-engine-optimization" alt="">
+        <section id="search-engine-nav" class="content-section" alt="">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <section id="online-reputation-nav" class="online-reputation-management">
+        <section id="online-reputation-nav" class="content-section">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section id="social-media-nav" class="social-media-marketing">
+        <section id="social-media-nav" class="content-section">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt=""/>
             <h2>Social Media Marketing</h2>
             <p>
